--- a/versions.gradle
+++ b/versions.gradle
@@ -2,7 +2,7 @@ ext {
   BUILD_TOOLS_VERSION = '29.0.0'
   COMPILE_SDK_VERSION = 29
   TARGET_SDK_VERSION = 29
-  MINIMUM_SDK_VERSION = 15
+  MINIMUM_SDK_VERSION = 18
 
   APP_VERSION = 1
   APP_VERSION_NAME = '1.0.0'
@@ -18,6 +18,7 @@ ext {
   RX_JAVA_VERSION = '2.1.16'
   RX_ANDROID_VERSION = '2.0.2'
   AUTODISPOSE_VERSION = '1.3.0'
+  NAVIGATION_COMPONENT_VERSION = '2.1.0-beta02'
   RETROFIT_VERSION = '2.4.0'
   ROOM_VERSION = '1.1.1'
   GLIDE_VERSION = '4.8.0'
